feat: added unit tests
