# docs/swagger.yaml
@@ -1,4 +1,4 @@
-basePath: /
+basePath: /api/
 definitions:
   entity.GetUserInput:
     properties:
@@ -6,17 +6,6 @@ definitions:
         type: string
       user_login:
         type: string
-    type: object
-  entity.HttpResp-entity_UserCommonInfo:
-    properties:
-      error:
-        type: string
-      message:
-        type: string
-      meta:
-        type: string
-      result:
-        $ref: '#/definitions/entity.UserCommonInfo'
     type: object
   entity.User:
     properties:
@@ -59,6 +48,29 @@ definitions:
     - Admin
     - Service
     - Person
+  http.ErrForResp:
+    properties:
+      code:
+        type: string
+      message:
+        type: string
+    type: object
+  http.Resp-entity_UserCommonInfo:
+    properties:
+      message:
+        type: string
+      meta:
+        type: string
+      result:
+        $ref: '#/definitions/entity.UserCommonInfo'
+    type: object
+  http.RespErr:
+    properties:
+      error:
+        $ref: '#/definitions/http.ErrForResp'
+      meta:
+        type: string
+    type: object
 info:
   contact:
     email: kalinindima123@yandex.ru
@@ -86,7 +98,11 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/entity.HttpResp-entity_UserCommonInfo'
+            $ref: '#/definitions/http.Resp-entity_UserCommonInfo'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/http.RespErr'
       summary: get user info
       tags:
       - Admin
@@ -108,7 +124,11 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/entity.HttpResp-entity_UserCommonInfo'
+            $ref: '#/definitions/http.Resp-entity_UserCommonInfo'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/http.RespErr'
       summary: Register new user
       tags:
       - Admin
